--- a/02-css-modules/src/App.css
+++ b/02-css-modules/src/App.css
@@ -1,3 +1,9 @@
+body {
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  transition: background-color 0.25s, color 0.25s;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
