Implementando 04-styled-components

--- a/02-css-modules/src/index.css
+++ b/02-css-modules/src/index.css
@@ -1,36 +1,69 @@
 :root {
-  /* valores padrão (light) */
-  --bg-color: #faf6f1;
-  --text-color: #222;
+  --bg-color-card: #ffffff;
+  --text-color-card: #222222;
   --button-bg: #222;
   --button-text: #faf6f1;
-  --bg-color-card: #ffffff;
-  --text-color-card: #222;
   --skeleton-bg: #ddd;
-  --rating-color: #ffb400;
-  --button-hover-bg: #444;
-}
-
-body.light {
-  --bg-color: #faf6f1;
-  --text-color: #222;
-  --button-bg: #222;
-  --button-text: #faf6f1;
-  --bg-color-card: #ffffff;
-  --text-color-card: #222;
-  --skeleton-bg: #ddd;
-  --rating-color: #ffb400;
-  --button-hover-bg: #444;
 }
 
 body.dark {
-  --bg-color: #222;
-  --text-color: #faf6f1;
+  --bg-color-card: #333333;
+  --text-color-card: #faf6f1;
   --button-bg: #faf6f1;
   --button-text: #222;
-  --bg-color-card: #333;
-  --text-color-card: #faf6f1;
   --skeleton-bg: #555;
-  --rating-color: #ffd54f;
-  --button-hover-bg: var(--skeleton-bg);
+}
+
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
 }
